2001-02-14  Charles 'Buck' Krasic  <krasic@acm.org>

	* Bugfix from Stefan Lucke for recent PAL breakage.

2001-02-08  Charles 'Buck' Krasic  <krasic@acm.org>

	* Add --enable-gprof to configure.  Disable SDL by default.  Minor
	  fixups in display.c for missing #if HAVE_GTK and #if HAVE_SDL.

2001-02-07  Charles 'Buck' Krasic  <krasic@acm.org>

	* Version 0.4.

	* Cosmetic nit:  move to consistent use of C style comments.

	* Integrate patch from Scott F. Johnston for non-gcc non-x86
	  architectures.  Add untested fixed_multiply to idct_248.c for
	  non-gcc non-x86 architectures.  Also disable popt on non-gcc,
	  since our popt code uses gcc struct initialization extension
	  heavily.

	* Integrate patch from Stefan Lucke for aspect-ratio handling
	  with Xv based display.

2001-02-06  Charles 'Buck' Krasic  <krasic@acm.org>

	* Integrate patch from Stefan Lucke for various speedups:

           - replace pointer dereferences with indexed accesses.

           - merge 248 idct prescale into 248 quant.

           - change IEC PAL (420) to generate YUY2 instead of YV12.  

	     Is this really faster?  If so, I am suprised.  I have added a
	     configure option to allow choosing which version to build
	     (YUY2 is default), so I can verify the performance comparison.

	   - Fix to Makefile.vanilla to include util.c in build.

	   - still to do: it looks like there are incompatable versions of
	     popt around.  Need to add a configure check to figure out
	     whether filename needs to be declared as a const char *.

	* Change license banner to read "a free DV codec" instead of "a
	  free decoder".

	* Add the banner to files that didn't have it.

2001-02-03  Peter Schlaile <udbz@rz.uni-karlsruhe.de>

        * Additional encoder speedups and improvements it now also uses
	  popt, can read ppm-streams, can correct wrongly interlaced input
	  pictures.  Speedups: we are between 4 and 5 times away from